--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
   ${Eigen_INCLUDE_DIRS}
   ${PYTHON_INCLUDE_DIRS}
+  ${BULLET_INCLUDE_DIRS}
 )
 
 if (NOT APPLE)
@@ -15,7 +16,6 @@ add_executable(test_npeigen
 )
 target_link_libraries(test_npeigen ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES})
 
-
 include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
-boost_python_module(trackingpy python_interface.cpp mass_system.cpp npeigen.cpp)
-target_link_libraries(trackingpy ${Boost_SYSTEM_LIBRARY})
+boost_python_module(ctrackingpy python_interface.cpp mass_system.cpp npeigen.cpp bullet_unity.cpp)
+target_link_libraries(ctrackingpy ${Boost_SYSTEM_LIBRARY})
