--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,5 +17,10 @@ add_executable(test_npeigen
 target_link_libraries(test_npeigen ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES})
 
 include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
-boost_python_module(ctrackingpy python_interface.cpp mass_system.cpp npeigen.cpp bullet_unity.cpp)
+boost_python_module(ctrackingpy
+  python_interface.cpp
+  mass_system.cpp
+  npeigen.cpp
+  bullet_unity.cpp
+)
 target_link_libraries(ctrackingpy ${Boost_SYSTEM_LIBRARY})
