cleanup + comments + readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 include("${CMAKE_SOURCE_DIR}/cmake/boost-python.cmake")
 
 add_subdirectory(src)
+#add_subdirectory(ext/cloudproc)
